parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package utg.mcc.parser;

import utg.mcc.parser.ast.ASTNode;
import utg.mcc.parser.ast.ASTAdd;
import utg.mcc.parser.ast.ASTNot;
import utg.mcc.parser.ast.ASTAnd;
import utg.mcc.parser.ast.ASTOr;
import utg.mcc.parser.ast.ASTAssignStatement;
import utg.mcc.parser.ast.ASTBlockStatement;
import utg.mcc.parser.ast.ASTCall;
import utg.mcc.parser.ast.ASTContinueStatement;
import utg.mcc.parser.ast.ASTDeclaration;
import utg.mcc.parser.ast.ASTDiv;
import utg.mcc.parser.ast.ASTEq;
import utg.mcc.parser.ast.ASTExpression;
import utg.mcc.parser.ast.ASTFunDeclaration;
import utg.mcc.parser.ast.ASTGe;
import utg.mcc.parser.ast.ASTGt;
import utg.mcc.parser.ast.ASTIfStatement;
import utg.mcc.parser.ast.ASTIntegerConstant;
import utg.mcc.parser.ast.ASTLe;
import utg.mcc.parser.ast.ASTLt;
import utg.mcc.parser.ast.ASTMul;
import utg.mcc.parser.ast.ASTNe;
import utg.mcc.parser.ast.ASTNeg;
import utg.mcc.parser.ast.ASTParDeclaration;
import utg.mcc.parser.ast.ASTPrintStatement;
import utg.mcc.parser.ast.ASTProgram;
import utg.mcc.parser.ast.ASTReturnStatement;
import utg.mcc.parser.ast.ASTStatement;
import utg.mcc.parser.ast.ASTSub;
import utg.mcc.parser.ast.ASTVarDeclaration;
import utg.mcc.parser.ast.ASTVariable;
import utg.mcc.parser.ast.ASTWhileStatement;
import utg.mcc.parser.ast.ASTDoWhileStatement;
import utg.mcc.parser.ast.ASTBreakStatement;
import utg.utils.Message;

public class Parser implements ParserConstants {

  private static Message m = new Message("parser");

  static final public ASTProgram program() throws ParseException {
  ASTProgram p = new ASTProgram();
  ASTDeclaration d = null;
  ASTStatement s = null;
    m.verbose("> program");
    m.i();
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      d = variableDeclaration();
      p.addDeclaration(d);
    }
    label_2:
    while (true) {
      if (jj_2_2(3)) {
        ;
      } else {
        break label_2;
      }
      d = functionDeclaration();
      p.addDeclaration(d);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case RETURN:
      case PRINT:
      case BREAK:
      case LB:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_3;
      }
      s = statement();
      p.addStatement(s);
    }
    jj_consume_token(0);
    m.d();
    m.verbose("< program");
    {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTVarDeclaration variableDeclaration() throws ParseException {
  Token t = null;
    m.verbose("> variable declaration");
    m.i();
    jj_consume_token(INT);
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(SE);
    m.d();
    m.verbose("< variable declaration");
    {if (true) return new ASTVarDeclaration(t.image, "int");}
    throw new Error("Missing return statement in function");
  }

  static final public ASTDeclaration functionDeclaration() throws ParseException {
  Token t = null;
  ASTFunDeclaration d = null;
  ASTBlockStatement b = null;
    m.verbose("> function declaration");
    m.i();
    jj_consume_token(INT);
    t = jj_consume_token(IDENTIFIER);
    d = new ASTFunDeclaration(t.image, "int");
    jj_consume_token(LP);
    parameterDeclarations(d);
    jj_consume_token(RP);
    b = blockStatement();
    d.block = b;
    m.d();
    m.verbose("< function declaration");
    {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  static final public void parameterDeclarations(ASTFunDeclaration d) throws ParseException {
  ASTParDeclaration p = null;
  Token t = null;
    m.verbose("> parameter declaration");
    m.i();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      t = jj_consume_token(IDENTIFIER);
      p = new ASTParDeclaration(t.image, "int");
      d.addDeclaration(p);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CO:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_4;
        }
        jj_consume_token(CO);
        jj_consume_token(INT);
        t = jj_consume_token(IDENTIFIER);
       p = new ASTParDeclaration(t.image, "int");
       d.addDeclaration(p);
      }
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    m.d();
    m.verbose("< parameter declaration");
  }

  static final public ASTBlockStatement blockStatement() throws ParseException {
  ASTBlockStatement b = new ASTBlockStatement();
  ASTVarDeclaration v = null;
  ASTStatement s = null;
  Token t;
    m.verbose("> block");
    m.i();
    t = jj_consume_token(LB);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_5;
      }
      v = variableDeclaration();
      b.addDeclaration(v);
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case RETURN:
      case PRINT:
      case BREAK:
      case LB:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_6;
      }
      s = statement();
      b.addStatement(s);
    }
    jj_consume_token(RB);
    b.setPosition(t);
    m.d();
    m.verbose("< block");
    {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatement statement() throws ParseException {
  ASTStatement s = null;
  ASTExpression e = null;
  Token t = null;
  Token u = null;
    m.verbose("> statement");
    m.i();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    m.verbose("> assign statement");
    m.i();
      t = jj_consume_token(IDENTIFIER);
      u = jj_consume_token(ASSIGN);
      e = addExpression();
      jj_consume_token(SE);
    ASTVariable v = new ASTVariable(t.image);
    v.setPosition(t);
    s = new ASTAssignStatement(v, e);
    s.setPosition(u);
    m.d();
    m.verbose("< assign statement");
      break;
    case WHILE:
    m.verbose("> while statement");
    m.i();
      s = whileStatement();
    m.d();
    m.verbose("< while statement");
      break;
    case IF:
    m.verbose("> if statement");
    m.i();
      s = ifStatement();
    m.d();
    m.verbose("< if statement");
      break;
    case BREAK:
    m.verbose("> break statement");
    m.i();
      s = breakStatement();
    m.d();
    m.verbose("< break statement");
      break;
    case RETURN:
    m.verbose("> return statement");
    m.i();
      u = jj_consume_token(RETURN);
      e = addExpression();
      jj_consume_token(SE);
    s = new ASTReturnStatement(e);
    s.setPosition(u);
    m.d();
    m.verbose("< return statement");
      break;
    case PRINT:
    m.verbose("> print statement");
    m.i();
      jj_consume_token(PRINT);
      jj_consume_token(LP);
      e = addExpression();
      jj_consume_token(RP);
      jj_consume_token(SE);
    s = new ASTPrintStatement(e);
    m.d();
    m.verbose("< print statement");
      break;
    case LB:
      s = blockStatement();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    m.d();
    m.verbose("< statement");
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTWhileStatement whileStatement() throws ParseException {
  ASTExpression e = null;
  ASTStatement s = null;
    jj_consume_token(WHILE);
    jj_consume_token(LP);
    e = orExpression();
    jj_consume_token(RP);
    s = statement();
    {if (true) return new ASTWhileStatement(e, s);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTIfStatement ifStatement() throws ParseException {
  ASTExpression e = null;
  ASTStatement st = null;
  ASTStatement se = null;
    jj_consume_token(IF);
    jj_consume_token(LP);
    e = orExpression();
    jj_consume_token(RP);
    st = statement();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      se = statement();
      {if (true) return new ASTIfStatement(e, st, se);}
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    {if (true) return new ASTIfStatement(e, st);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression orExpression() throws ParseException {
  ASTExpression result = null;
  ASTExpression e = null;
  Token t;
    m.verbose("> or expression");
    m.i();
    result = andExpression();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      t = jj_consume_token(OR);
      e = andExpression();
      result = new ASTOr(result, e);
      result.setPosition(t);
    }
    m.d();
    m.verbose("< or expression");
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression andExpression() throws ParseException {
  ASTExpression result = null;
  ASTExpression e = null;
  Token t;
    m.verbose("> and expression");
    m.i();
    result = relExpression();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      t = jj_consume_token(AND);
      e = relExpression();
      result = new ASTAnd(result, e);
      result.setPosition(t);
    }
    m.d();
    m.verbose("< and expression");
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression relExpression() throws ParseException {
  ASTExpression result = null;
  ASTExpression e = null;
  Token t = null;
    m.verbose("> relation expression");
    m.i();
    result = addExpression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case GT:
    case LT:
    case EQ:
    case LE:
    case GE:
    case NE:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case GT:
        t = jj_consume_token(GT);
        e = addExpression();
      result = new ASTGt(result,e);
      result.setPosition(t);
        break;
      case GE:
        t = jj_consume_token(GE);
        e = addExpression();
      result = new ASTGe(result,e);
      result.setPosition(t);
        break;
      case EQ:
        t = jj_consume_token(EQ);
        e = addExpression();
      result = new ASTEq(result,e);
      result.setPosition(t);
        break;
      case NE:
        t = jj_consume_token(NE);
        e = addExpression();
      result = new ASTNe(result,e);
      result.setPosition(t);
        break;
      case LT:
        t = jj_consume_token(LT);
        e = addExpression();
      result = new ASTLt(result,e);
      result.setPosition(t);
        break;
      case LE:
        t = jj_consume_token(LE);
        e = addExpression();
      result = new ASTLe(result,e);
      result.setPosition(t);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    m.d();
    m.verbose("< relation expression");
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression addExpression() throws ParseException {
  ASTExpression result = null;
  ASTExpression e = null;
  Token t;
    m.verbose("> add expression");
    m.i();
    result = mulExpression();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
      case SUB:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        t = jj_consume_token(ADD);
        e = mulExpression();
      result = new ASTAdd(result, e);
      result.setPosition(t);
        break;
      case SUB:
        t = jj_consume_token(SUB);
        e = mulExpression();
      result = new ASTSub(result, e);
      result.setPosition(t);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    m.d();
    m.verbose("< add expression");
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression mulExpression() throws ParseException {
  ASTExpression result = null;
  ASTExpression e = null;
  Token t;
    m.verbose("> mul expression");
    m.i();
    result = negExpression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
      case DIV:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
        t = jj_consume_token(MUL);
        e = negExpression();
      result = new ASTMul(result, e);
      result.setPosition(t);
        break;
      case DIV:
        t = jj_consume_token(DIV);
        e = negExpression();
      result = new ASTDiv(result, e);
      result.setPosition(t);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    m.d();
    m.verbose("<  mul expression");
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression negExpression() throws ParseException {
  ASTExpression result = null;
  ASTExpression e = null;
  Token t;
    m.verbose("> neg expression");
    m.i();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUB:
      t = jj_consume_token(SUB);
      e = priExpression();
      result = new ASTNeg(e);
      result.setPosition(t);
      break;
    case NOT:
      t = jj_consume_token(NOT);
      e = priExpression();
      result = new ASTNot(e);
      result.setPosition(t);
      break;
    case LP:
    case INTEGER:
    case IDENTIFIER:
      result = priExpression();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    m.d();
    m.verbose("<  neg expression");
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression priExpression() throws ParseException {
  ASTExpression result = null;
  ASTCall c = null;
  Token t = null;
    m.verbose("> pri expression");
    m.i();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      t = jj_consume_token(INTEGER);
    result = new ASTIntegerConstant(Integer.parseInt(token.image));
    result.setPosition(t);
      break;
    case LP:
      jj_consume_token(LP);
      result = orExpression();
      jj_consume_token(RP);
      break;
    case IDENTIFIER:
      t = jj_consume_token(IDENTIFIER);
    result = new ASTVariable(t.image);
    result.setPosition(t);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LP:
        jj_consume_token(LP);
      c = new ASTCall(t.image);
      result = c;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LP:
        case SUB:
        case NOT:
        case INTEGER:
        case IDENTIFIER:
          arguments(c);
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        jj_consume_token(RP);
      result.setPosition(t);
        break;
      default:
        jj_la1[17] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    m.d();
    m.verbose("<  pri expression");
    {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  static final public void arguments(ASTCall f) throws ParseException {
  ASTExpression e = null;
    e = addExpression();
    f.addParameter(e);
    jj_consume_token(CO);
    e = addExpression();
      f.addParameter(e);
  }

  static final public ASTDoWhileStatement doWhileStatement() throws ParseException {
  ASTExpression e = null; ASTStatement s = null;
    jj_consume_token(DO);
    s = statement();
    jj_consume_token(WHILE);
    jj_consume_token(LP);
    e = orExpression();
    jj_consume_token(RP);
  {if (true) return new ASTDoWhileStatement(e, s);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTBreakStatement breakStatement() throws ParseException {
  ASTBreakStatement s = null;
  Token t = null;
    t = jj_consume_token(BREAK);
    jj_consume_token(SE);
    s = new ASTBreakStatement();
    s.setPosition(t);
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTContinueStatement continueStatement() throws ParseException {
  ASTContinueStatement s = null;
  Token t = null;
    t = jj_consume_token(CONTINUE);
    jj_consume_token(SE);
    s = new ASTContinueStatement();
    s.setPosition(t);
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(LP)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_11()) return true;
    return false;
  }
